--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html> 
-<html lang="en"> 
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>My Phaser Game</title>
+    <title>Tutorial Game</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <style type="text/css">
         body {
@@ -32,19 +32,18 @@ var config = {
     }
 };
 
-var player;
-var stars;
-var bombs;
-var platforms;
-var cursors;
-var score = 0;
+var player1, player2;
+var stars, bombs, platforms;
+var cursors, wasd;
+var score1 = 0, score2 = 0;
+var scoreText1, scoreText2, gameOverText, timerText;
 var gameOver = false;
-var scoreText;
+var player1Alive = true, player2Alive = true;
+var timer = 0;
 
 var game = new Phaser.Game(config);
 
-function preload ()
-{
+function preload() {
     this.load.image('sky', 'assets/sky.png');
     this.load.image('ground', 'assets/platform.png');
     this.load.image('star', 'assets/star.png');
@@ -52,22 +51,22 @@ function preload ()
     this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
 }
 
-function create ()
-{
+function create() {
     this.add.image(400, 300, 'sky');
 
     platforms = this.physics.add.staticGroup();
-
     platforms.create(400, 568, 'ground').setScale(2).refreshBody();
-
     platforms.create(600, 400, 'ground');
     platforms.create(50, 250, 'ground');
     platforms.create(750, 220, 'ground');
 
-    player = this.physics.add.sprite(100, 450, 'dude');
+    player1 = this.physics.add.sprite(100, 450, 'dude');
+    player1.setBounce(0.2);
+    player1.setCollideWorldBounds(true);
 
-    player.setBounce(0.2);
-    player.setCollideWorldBounds(true);
+    player2 = this.physics.add.sprite(700, 450, 'dude');
+    player2.setBounce(0.2);
+    player2.setCollideWorldBounds(true);
 
     this.anims.create({
         key: 'left',
@@ -78,7 +77,7 @@ function create ()
 
     this.anims.create({
         key: 'turn',
-        frames: [ { key: 'dude', frame: 4 } ],
+        frames: [{ key: 'dude', frame: 4 }],
         frameRate: 20
     });
 
@@ -90,6 +89,13 @@ function create ()
     });
 
     cursors = this.input.keyboard.createCursorKeys();
+    wasd = this.input.keyboard.addKeys({
+        up: Phaser.Input.Keyboard.KeyCodes.W,
+        left: Phaser.Input.Keyboard.KeyCodes.A,
+        down: Phaser.Input.Keyboard.KeyCodes.S,
+        right: Phaser.Input.Keyboard.KeyCodes.D
+    });
+
     stars = this.physics.add.group({
         key: 'star',
         repeat: 11,
@@ -101,73 +107,141 @@ function create ()
     });
 
     bombs = this.physics.add.group();
-    scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
-    this.physics.add.collider(player, platforms);
+
+    scoreText1 = this.add.text(16, 16, 'P1 Score: 0', { fontSize: '24px', fill: '#000' });
+    scoreText2 = this.add.text(16, 40, 'P2 Score: 0', { fontSize: '24px', fill: '#000' });
+    timerText = this.add.text(650, 16, 'Time: 0', { fontSize: '24px', fill: '#000' });
+    gameOverText = this.add.text(300, 250, '', { fontSize: '48px', fill: '#ff0000' }).setVisible(false);
+
+    this.physics.add.collider(player1, platforms);
+    this.physics.add.collider(player2, platforms);
     this.physics.add.collider(stars, platforms);
     this.physics.add.collider(bombs, platforms);
-    this.physics.add.overlap(player, stars, collectStar, null, this);
-    this.physics.add.collider(player, bombs, hitBomb, null, this);
+
+    this.physics.add.overlap(player1, stars, collectStar, null, this);
+    this.physics.add.overlap(player2, stars, collectStar, null, this);
+
+    this.physics.add.collider(player1, bombs, hitBomb.bind(this, player1, 'player1'), null, this);
+    this.physics.add.collider(player2, bombs, hitBomb.bind(this, player2, 'player2'), null, this);
+
+    this.time.addEvent({
+        delay: 1000,
+        callback: updateTimer,
+        callbackScope: this,
+        loop: true
+    });
 }
 
-function update ()
-{
-    if (gameOver)
-    {
+function update() {
+    if (gameOver) {
         return;
     }
 
-    if (cursors.left.isDown)
-    {
-        player.setVelocityX(-160);
-        player.anims.play('left', true);
-    }
-    else if (cursors.right.isDown)
-    {
-        player.setVelocityX(160);
-        player.anims.play('right', true);
-    }
-    else
-    {
-        player.setVelocityX(0);
+    if (player1Alive) {
+        if (cursors.left.isDown) {
+            player1.setVelocityX(-160);
+            player1.anims.play('left', true);
+        } else if (cursors.right.isDown) {
+            player1.setVelocityX(160);
+            player1.anims.play('right', true);
+        } else {
+            player1.setVelocityX(0);
+            player1.anims.play('turn');
+        }
 
-        player.anims.play('turn');
+        if (cursors.up.isDown && player1.body.touching.down) {
+            player1.setVelocityY(-330);
+        }
     }
 
-    if (cursors.up.isDown && player.body.touching.down)
-    {
-        player.setVelocityY(-330);
+    if (player2Alive) {
+        if (wasd.left.isDown) {
+            player2.setVelocityX(-160);
+            player2.anims.play('left', true);
+        } else if (wasd.right.isDown) {
+            player2.setVelocityX(160);
+            player2.anims.play('right', true);
+        } else {
+            player2.setVelocityX(0);
+            player2.anims.play('turn');
+        }
+
+        if (wasd.up.isDown && player2.body.touching.down) {
+            player2.setVelocityY(-330);
+        }
     }
 }
 
-function collectStar (player, star)
-{
+function collectStar(player, star) {
     star.disableBody(true, true);
 
-    score += 10;
-    scoreText.setText('Score: ' + score);
+    if (player === player1) {
+        score1 += 10;
+        scoreText1.setText('P1 Score: ' + score1);
+    } else if (player === player2) {
+        score2 += 10;
+        scoreText2.setText('P2 Score: ' + score2);
+    }
 
-    if (stars.countActive(true) === 0)
-    {
+    if (stars.countActive(true) === 0) {
         stars.children.iterate(function (child) {
             child.enableBody(true, child.x, 0, true, true);
         });
 
-        var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+        var x = Phaser.Math.Between(0, 800);
         var bomb = bombs.create(x, 16, 'bomb');
         bomb.setBounce(1);
         bomb.setCollideWorldBounds(true);
         bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
         bomb.allowGravity = false;
-
     }
 }
 
-function hitBomb (player, bomb)
-{
-    this.physics.pause();
+function hitBomb(player, playerKey) {
+    if (playerKey === 'player1') {
+        player1Alive = false;
+    } else if (playerKey === 'player2') {
+        player2Alive = false;
+    }
+
     player.setTint(0xff0000);
     player.anims.play('turn');
+    player.setVelocity(0, 0);
+
+    this.time.delayedCall(5000, function() {
+        player.disableBody(true, true);
+        if (!player1Alive && !player2Alive) {
+            endGame();
+        }
+    }, [], this);
+
+    if (!player1Alive && !player2Alive) {
+        clearObjects();
+        endGame();
+    }
+}
+
+function clearObjects() {
+    stars.clear(true, true);
+    bombs.clear(true, true);
+}
+
+function endGame() {
     gameOver = true;
+    if (score1 > score2) {
+        gameOverText.setText('Player 1 Wins!').setVisible(true);
+    } else if (score2 > score1) {
+        gameOverText.setText('Player 2 Wins!').setVisible(true);
+    } else {
+        gameOverText.setText('Draw!').setVisible(true);
+    }
+}
+
+function updateTimer() {
+    if (!gameOver) {
+        timer++;
+        timerText.setText('Time: ' + timer);
+    }
 }
 
 </script>
