working on mutliclient connections

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <body>
     <script type="module" src="/src/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      const socket = io();
-    </script>
+    <script src="./src/client.js"></script>
   </body>
 </html>
